# project_wxWidgets

./: CMakeLists.txt  Lab9.7z  Makefile
headers/: App.hpp  drawingcanvas.hpp  graphicobject.hpp  pch.hpp  utility.hpp
headers/Controller/: Controller.hpp  IController.hpp
headers/Controller/Editor/: Editor.hpp
headers/Model/: Model.hpp
headers/Model/Canvas/: ICanvas.hpp  SVGCanvas.hpp  WXCanvas.hpp
headers/Model/Commands/: AbstractUndoableEdit.hpp  CompoundEdit.hpp  IUndoableEdit.hpp  IUndoableEdit_fwd.hpp  UndoManager.hpp
headers/Model/Document/: HTMLDocument.hpp  IDocument.hpp  IDocument_fwd.hpp  Model.hpp  common.hpp
headers/Model/Document/Commands/: CDeleteDocumentItem.hpp  CSetTitle.hpp  (+3 more)
headers/Model/Iterator/: Iterator.hpp
headers/Pattern/Observer/: Observer.hpp
headers/View/: View.hpp
src/: App.cpp  CMakeLists.txt  drawingcanvas.cpp  main.cpp
src/Controller/: Controller.cpp
src/Controller/Editor/: Editor.cpp
src/Model/: Model.cpp
src/Model/Canvas/: WXCanvas.cpp  drawingcanvas.cpp
src/Model/Commands/: AbstractUndoableEdit.cpp  CompoundEdit.cpp  UndoManager.cpp
src/Model/Document/: HTMLDocument.cpp  Model.cpp
src/Model/Document/Commands/: CSetTitle.cpp
src/Model/Document/Elements/: DocumentItem.cpp  Image.cpp  Paragraph.cpp
src/Model/Document/Elements/Shape/: Ellipse.cpp  Rectangle.cpp  RegularPolygon.cpp  Shape.cpp  Triangle.cpp
src/Model/Document/Elements/Shape/Factory/: ShapeFactory.cpp
src/View/: View.cpp
src/src/Canvas/: SVGCanvas.cpp
subprojects/tmp/wx_drawing_tutorial_core/: wx_drawing_tutorial_core-cfgcmd.txt
(+28 files in other folders)
